<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.tcp.fragments.tabla_de_conexiones_fragment.TablaDeConexionesTCPFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:showDividers="middle"
          >

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/black"
                android:showDividers="middle|end|beginning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_estado_actual"
                    android:layout_width="120dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:paddingBottom="8dp"
                    android:text="Estado Actual"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_direccion_ip_local"
                    android:layout_width="120dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:paddingBottom="8dp"
                    android:text="@string/direccion_ip_local"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_puerto_local"
                    android:layout_width="120dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:paddingBottom="8dp"
                    android:text="@string/nombre_del_host"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_direccion_ip_remota"
                    android:layout_width="120dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:paddingBottom="8dp"
                    android:text="@string/direccion_ip_remota"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_puerto_remoto"
                    android:layout_width="120dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:paddingBottom="8dp"
                    android:text="@string/puerto_remoto"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />
            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/black"
                android:dividerPadding="8dp"
                android:showDividers="middle|end|beginning"
                android:visibility="visible" />
        </TableLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
