<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly_nombre_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_button_group">

        <TextView
            android:id="@+id/tv_nombre_host"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_host"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/et_nombre_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:autofillHints=""
            android:hint="@string/escribe_el_nombre_del_host"
            android:inputType="text"
            android:labelFor="@+id/tv_host_ip"
            android:text="" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ly_ip_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_nombre_host">

        <TextView
            android:id="@+id/tv_host_ip"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/host_ip"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/et_host_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:autofillHints=""
            android:hint="@string/escribe_la_ip_del_host"
            android:inputType="text"
            android:labelFor="@+id/tv_host_ip"
            android:text="192.168.1.101" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_puerto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_comunidad">

        <TextView
            android:id="@+id/tv_puerto"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Puerto"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/et_puerto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:autofillHints="161"
            android:hint="161"
            android:inputType="number"
            android:labelFor="@+id/tv_host_ip"
            android:textColorHint="@color/black_opacity" />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/ly_oid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_comunidad">

        <TextView
            android:id="@+id/tv_oid"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="OID"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/et_oid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:autofillHints="161"
            android:inputType="number|text"
            android:labelFor="@+id/tv_host_ip"
            android:textColorHint="@color/black_opacity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_comunidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_ip_host">

        <TextView
            android:id="@+id/tv_comunidad"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Comunidad"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/et_comunidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:autofillHints="public"
            android:hint="public"
            android:inputType="text"
            android:labelFor="@+id/tv_comunidad"
            android:textColorHint="@color/black_opacity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_tipo_dispositivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_oid">

        <TextView
            android:id="@+id/tv_tipo_dispositivo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Tipo de dispositivo"
            android:textSize="@dimen/text_size_medium" />

        <Spinner
            android:id="@+id/sp_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_version_snmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_tipo_dispositivo">

        <TextView
            android:id="@+id/tv_version_snmp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/version_snmp"
            android:textSize="@dimen/text_size_medium" />

        <Spinner
            android:id="@+id/sp_version_snmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/ly_tipo_operacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_version_snmp">

        <TextView
            android:id="@+id/tv_tipo_operacion"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo_operacion"
            android:textSize="@dimen/text_size_medium" />

        <Spinner
            android:id="@+id/sp_tipo_operacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/ly_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_tipo_operacion">

        <TextView
            android:id="@+id/txt_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Resultado" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textColor="@color/black"
                android:gravity="top|start"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_formulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="Conexión de Prueba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_descripcion" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <Button
            android:id="@+id/button1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SNMP" />


        <Button
            android:id="@+id/button2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ICMP" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


</androidx.constraintlayout.widget.ConstraintLayout>